# gtelnet

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  NEWS  README.md  compile_install  configure  configure.in  gnome-telnet-2.4redhat.spec  install_shared
docs/: display_options.html  index.html  license.html  main_window.html  rlogin_options.html  ssh_key_gen.html  ssh_options.html  start.html  support.html  telnet_options.html
macros/: Makefile.in
po/: POTFILES.in  cat-id-tbl.c  de.gmo  de.po  gnome-telnet.pot  ja.gmo  ja.po  sl.gmo  sl.po
share/: GTelnet.desktop  gtelnet
src/: Makefile.am  Makefile.in  interface.c  interface.h  main.c  stoerer.h
